# twist

./: .dockerignore  .env.backend.example  .env.production.template  .gitignore  README.md  docker-compose.backend.yml  docker-compose.production.yml  docker-compose.test.yml  package-lock.json  package.json
twist-blockchain/: Anchor.toml  BUILD_SUMMARY.md  CLAUDE_MD_VERIFICATION.md  COMPLETION_CHECKLIST.md  Cargo.toml  FINAL_BUILD_REPORT.md  IMPLEMENTATION_SUMMARY.md  MODULE_COMPLETE.md  PSAB_IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json  tsconfig.json
twist-blockchain/bots/arbitrage-monitor/: alert-manager.ts  arbitrage-calculator.ts  dex-monitor.ts  index.ts  package.json
twist-blockchain/bots/buyback-bot/: .eslintrc.json  README.md  config.json  index.ts  orca-manager.ts  package-lock.json  package.json  price-monitor.ts  strategy.ts
twist-blockchain/bots/buyback-bot/src/: index.ts
twist-blockchain/bots/liquidity-manager/: .env.example  package-lock.json  package.json  tsconfig.json
twist-blockchain/bots/liquidity-manager/src/: index.ts  logger.ts  metrics.ts  position-manager.ts  range-calculator.ts  rebalancer.ts
twist-blockchain/bots/market-maker/: README.md  index.ts  inventory-manager.ts  market-maker.service  order-manager.ts  package-lock.json  package.json  risk-manager.ts  run.sh  spread-calculator.ts
twist-blockchain/bots/utils/: logger.ts
twist-blockchain/bots/volume-tracker/: README.md  index.ts  metrics-exporter.ts  package.json  run.sh  stop.sh  trade-analyzer.ts  tsconfig.json  volume-database.ts  volume-tracker.service
twist-blockchain/docs/: README.md  operations-runbook.md
twist-blockchain/docs/architecture/: README.md  economic-model.md  security.md  smart-contracts.md
twist-blockchain/docs/sdk/: typescript.md
twist-blockchain/docs/security/: audit.md
twist-blockchain/monitoring/: index.ts
twist-blockchain/monitoring/dashboard/: alerts.ts  health.ts  index.ts  metrics.ts  package-lock.json  package.json
twist-blockchain/monitoring/dashboard/public/: index.html
twist-blockchain/monitoring/dashboard/src/: index.ts
twist-blockchain/programs/bond-pool-factory/: Cargo.toml  PSAB_TEST_REPORT.md
twist-blockchain/programs/bond-pool-factory/src/: errors.rs  lib.rs
twist-blockchain/programs/bond-pool-factory/tests/: bond_pool_tests.rs  integration_tests.rs  psab_mechanism_test.rs  simple_test.rs  test_utils.rs
twist-blockchain/programs/bridge/: Cargo.toml
twist-blockchain/programs/bridge/src/: lib.rs
twist-blockchain/programs/influencer-staking/: Cargo.toml
twist-blockchain/programs/influencer-staking/src/: lib.rs
twist-blockchain/programs/staking/: Cargo.toml
twist-blockchain/programs/staking/src/: lib.rs
twist-blockchain/programs/treasury/: Cargo.toml
twist-blockchain/programs/treasury/src/: lib.rs
twist-blockchain/programs/twist-token/: Cargo.toml  final-verification-report.json
twist-blockchain/programs/twist-token/src/: constants.rs  errors.rs  events.rs  lib.rs  lib_fix.rs
twist-blockchain/programs/vau-processor/: Cargo.toml
twist-blockchain/programs/vau-processor/src/: errors.rs  lib.rs
twist-blockchain/programs/vau-processor/tests/: vau_integration_test.rs
twist-blockchain/programs/vesting/: Cargo.toml
twist-blockchain/programs/vesting/src/: lib.rs
twist-blockchain/scripts/: build-ts.sh
twist-blockchain/scripts/deploy/: 01-build.sh  02-deploy-devnet.sh  03-initialize.ts  06-deploy-mainnet.sh
twist-blockchain/sdk/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
twist-blockchain/sdk/idl/: twist_token.json
twist-blockchain/sdk/src/: bridge-timeout-fix.ts  client.ts  constants.ts  index.ts  rpc-config.ts  types.ts  utils.ts
twist-blockchain/sdk/src/accounts/: index.ts
twist-blockchain/sdk/src/defi/: orca-integration.ts
twist-blockchain/sdk/src/economics/: pid-controller.ts
twist-blockchain/sdk/src/instructions/: index.ts
twist-blockchain/sdk/src/oracles/: price-aggregator.ts
twist-blockchain/sdk/src/safety/: circuit-breaker.ts
twist-blockchain/sdk/twist-publisher-sdk/: INTEGRATION_GUIDE.md  package.json
twist-blockchain/sdk/twist-publisher-sdk/examples/: integration.html
twist-blockchain/sdk/twist-publisher-sdk/src/: constants.ts  index.ts  psab-client.ts  types.ts  utils.ts  widget.ts
twist-blockchain/src/: cross-chain.ts
twist-blockchain/tests/: economic_attacks.rs
twist-blockchain/tests/common/: mod.rs
twist-blockchain/tests/e2e/: full-flow.test.ts
twist-blockchain/tests/exhaustive-flows/: FINAL_TEST_SUMMARY.md  TEST_COVERAGE_MATRIX.md  TEST_EXECUTION_REPORT.md  TEST_FIXES_IMPLEMENTATION.md
twist-blockchain/tests/integration/: README.md  bot-integration.test.ts  stress-tests.test.ts  user-journeys.test.ts
twist-blockchain/tests/stress/: load-test.ts
twist-blockchain/tests/unit/: decay.test.ts  staking.test.ts
(+609 files in other folders)
