[workspace]
members = [
    "programs/twist-token",
    "programs/staking",
    "programs/treasury",
    "programs/vesting",
    "programs/bridge",
    "programs/influencer-staking",
    "programs/bond-pool-factory",
    "programs/vau-processor"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.0"
spl-token = "4.0.0"
spl-associated-token-account = "3.0.0"
pyth-sdk-solana = "0.10.0"
switchboard-solana = "0.30.0"
# wormhole-anchor-sdk = "0.1.0-alpha.2" # Temporarily disabled due to version conflicts
borsh = "0.10.3"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1