[package]
name = "bond-pool-factory"
version = "0.1.0"
description = "Page-Staked Attention Bonds (PSAB) for TWIST Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bond_pool_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
mpl-token-metadata = "3.2.3"
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
bs58 = "0.5"

[dev-dependencies]
solana-program-test = "1.18.12"
solana-sdk = "1.18.12"
tokio = { version = "1", features = ["full"] }
spl-token = { workspace = true }