[package]
name = "twist-treasury"
version = "0.1.0"
description = "TWIST treasury management program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "twist_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }