[package]
name = "twist-token"
version = "0.1.0"
description = "TWIST token program with decay mechanism"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "twist_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
pyth-sdk-solana = { workspace = true }
switchboard-solana = { workspace = true }
borsh = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = { version = "1", features = ["full"] }