[package]
name = "twist-vesting"
version = "0.1.0"
description = "TWIST vesting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "twist_vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }